--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/landingai-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>landingai</title>
+    <title>LoanLens AI</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
